--- a/06. Automation and Scraping/03. ts_file_operation.md
+++ b/06. Automation and Scraping/03. ts_file_operation.md
@@ -6,39 +6,55 @@ npm install csv-stringify # lightweight built-in + popular libraries:
 ```
 ## Text File Operations (.txt)
 ```ts
-import * as fs from 'fs/promises';
-import * as path from 'path';
+// Modern, clean imports (no * as anywhere)
+import fs from 'fs/promises';
+import path from 'path';
 
 // Ensure directory exists
-async function ensureDir(filePath: string) {
+async function ensureDir(filePath: string): Promise<void> {
   await fs.mkdir(path.dirname(filePath), { recursive: true });
 }
 
-// Write (overwrite)
+// Write (overwrite) a text file
 export async function writeTextFile(filePath: string, content: string): Promise<void> {
   await ensureDir(filePath);
   await fs.writeFile(filePath, content, 'utf-8');
 }
 
-// Append to text file
+// Append to a text file (adds newline automatically)
 export async function appendTextFile(filePath: string, content: string): Promise<void> {
   await ensureDir(filePath);
   await fs.appendFile(filePath, content + '\n', 'utf-8');
 }
 
-// Read entire text file
+// Read entire text file as string
 export async function readTextFile(filePath: string): Promise<string> {
   return await fs.readFile(filePath, 'utf-8');
 }
 
-// Read file line by line (streaming)
-export async function* readTextFileLines(filePath: string): AsyncGenerator<string> {
-  const file = await fs.readFile(filePath, 'utf-8');
-  for (const line of file.split(/\r?\n/)) {
-    if (line.trim() !== '') yield line;
-  }
-}
+// Read file line by line (proper streaming version – much better for large files)
+export async function readTextFileLines(filePath: string): AsyncIterable<string> {
+  const fileHandle = await fs.open(filePath, 'r');
+  const stream = fileHandle.createReadStream({ encoding: 'utf-8' });
 
+  let buffer = '';
+  for await (const chunk of stream) {
+    buffer += chunk;
+    let lineEnd: number;
+    while ((lineEnd = buffer.indexOf('\n')) !== -1) {
+      let line = buffer.slice(0, lineEnd);
+      buffer = buffer.slice(lineEnd + 1);
+      // Handle Windows CRLF
+      if (line.endsWith('\r')) line = line.slice(0, -1);
+      if (line.trim() !== '') yield line;
+    }
+  }
+
+  // Yield remaining line if file doesn't end with newline
+  if (buffer.trim() !== '') yield buffer.trim();
+
+  await fileHandle.close();
+}
 ```
 ## Define your data type (example) for csv
 ```ts
@@ -89,25 +105,25 @@ export async function appendToCsvFile<T extends Record<string, any>>(
 ```
 ## Read CSV File
 ```ts
-import * as fs from 'fs';
+import { createReadStream, existsSync } from 'fs';
 import csvParser from 'csv-parser';
+import { pipeline } from 'stream/promises';
 
-export function readCsvFile<T = any>(filePath: string): Promise<T[]> {
-  return new Promise((resolve, reject) => {
-    const results: T[] = [];
+export const readCsvFile = async <T = any>(filePath: string): Promise<T[]> => {
+  if (!existsSync(filePath)) return [];
 
-    if (!fs.existsSync(filePath)) {
-      resolve([]);
-      return;
+  const results: T[] = [];
+
+  await pipeline(
+    createReadStream(filePath),
+    csvParser(),
+    async function* (source) {
+      for await (const row of source) results.push(row as T);
     }
+  );
 
-    fs.createReadStream(filePath)
-      .pipe(csvParser())
-      .on('data', (data) => results.push(data))
-      .on('end', () => resolve(results))
-      .on('error', reject);
-  });
-}
+  return results;
+};
 ```
 ## Example Usage
 ```ts
@@ -148,11 +164,17 @@ main().catch(console.error);
 ```ts
 import { parse } from 'csv-parse/sync';
 import { stringify } from 'csv-stringify/sync';
-import * as fs from 'fs/promises';
+import fs from 'fs/promises';
+import path from 'path';
 
-async function writeCsvSimple(filePath: string, data: any[][]) {
+// Optional: auto-create directories (like your previous helpers)
+const ensureDir = (filePath: string) =>
+  fs.mkdir(path.dirname(filePath), { recursive: true });
+
+export async function writeCsvSimple(filePath: string, data: any[][]): Promise<void> {
+  await ensureDir(filePath);
   const csv = stringify(data, { header: true });
-  await fs.writeFile(filePath, csv);
+  await fs.writeFile(filePath, csv, 'utf-8');
 }
 ```
 ## Real-World Scraper Example
