--- a/06. Automation and Scraping/03. ts_file_operation.md
+++ b/06. Automation and Scraping/03. ts_file_operation.md
@@ -236,3 +236,72 @@ async function main() {
 main().catch(console.error);
 ```
 
+## Handle JSON file
+```ts
+// example-usage.ts
+import { readJson, writeJson, appendJsonArray, updateJson } from './json-utils';
+
+interface Product {
+  title: string;
+  price: string;
+  url: string;
+  scrapedAt: string;
+}
+
+const PRODUCTS_FILE = 'data/products.json';
+const PROGRESS_FILE = 'data/scrape-progress.json';
+
+// Fake data
+const fakeProducts: Product[] = [
+  { title: "iPhone 16", price: "$999", url: "https://apple.com/1", scrapedAt: new Date().toISOString() },
+  { title: "AirPods Pro", price: "$249", url: "https://apple.com/2", scrapedAt: new Date().toISOString() },
+];
+
+// ─────────────────────────────────────
+// 1. Save scraped items one by one (append mode)
+async function scrapeAndAppend() {
+  console.log("Scraping and appending one by one...");
+  for (const product of fakeProducts) {
+    await appendJsonArray(PRODUCTS_FILE, product);
+    console.log(`Appended: ${product.title}`);
+    // await delay(500); // simulate network
+  }
+}
+
+// ─────────────────────────────────────
+// 2. Track scraping progress (resume support!)
+async function markProgress(page: number) {
+  await updateJson(PROGRESS_FILE, (prev) => ({
+    lastPage: page,
+    totalProcessed: (prev.totalProcessed || 0) + 1,
+    resumed: prev.resumed || false,
+    lastRun: new Date().toISOString(),
+  }), { lastPage: 0, totalProcessed: 0 });
+}
+
+// ─────────────────────────────────────
+// 3. Read and show all saved data
+async function showAll() {
+  const products = await readJson<Product[]>(PRODUCTS_FILE, []);
+  console.log(`\nFound ${products.length} products:`);
+  console.table(products.map(p => ({ title: p.title, price: p.price })));
+
+  const progress = await readJson(PROGRESS_FILE, { lastPage: 0 });
+  console.log("Progress:", progress);
+}
+
+// ─────────────────────────────────────
+// Run everything
+async function main() {
+  await scrapeAndAppend();
+  await markProgress(42);
+  await showAll();
+
+  // Example: Force resume from page 201 next time
+  await writeJson(PROGRESS_FILE, { lastPage: 200, totalProcessed: 1000, resumed: true });
+  console.log("Forced next run to resume from page 201");
+}
+
+main().catch(console.error);
+```
+
