--- a/06. Automation and Scraping/03. ts_file_operation.md
+++ b/06. Automation and Scraping/03. ts_file_operation.md
@@ -56,17 +56,18 @@ export async function readTextFileLines(filePath: string): AsyncIterable<string>
   await fileHandle.close();
 }
 ```
-## Define your data type (example) for csv
-```ts
-interface Person {
-  name: string;
-  age: number;
-  city: string;
-}
-```
+
 ## Write CSV (create or overwrite)
 ```ts
-import { createObjectCsvWriter } from 'csv-writer';
+// csv-stringify-modern-example.ts
+import fs from 'fs/promises';
+import path from 'path';
+import { stringify } from 'csv-stringify/sync';
+
+
+const ensureDir = async (filePath: string): Promise<void> => {
+  await fs.mkdir(path.dirname(filePath), { recursive: true });
+};
 
 export async function writeCsvFile<T extends Record<string, any>>(
   filePath: string,
@@ -75,18 +76,57 @@ export async function writeCsvFile<T extends Record<string, any>>(
 ): Promise<void> {
   await ensureDir(filePath);
 
-  const csvWriter = createObjectCsvWriter({
-    path: filePath,
-    header,
-  });
+  const columns = header.map(h => ({
+    key: h.id as string,
+    header: h.title,
+  }));
 
-  await csvWriter.writeRecords(records);
+  const csvContent = stringify(records, {
+    header: true,
+    columns,
+  });
+  await fs.writeFile(filePath, csvContent, 'utf-8');
 }
+
+// ─────────────────────────────────────
+// EXACT SAME EXAMPLE 
+interface Person {
+  name: string;
+  age: number;
+  city: string;
+}
+
+const header = [
+  { id: 'name', title: 'Full Name' },
+  { id: 'age', title: 'Age' },
+  { id: 'city', title: 'City' },
+] as const;
+
+const peopleRecords: Person[] = [
+  { name: 'Alice Johnson', age: 28, city: 'Paris' },
+  { name: 'Bob Smith', age: 35, city: 'London' },
+];
+
+// Run it! — IDENTICAL TO BEFORE
+async function main() {
+  await writeCsvFile('./output/people.csv', peopleRecords, header);
+  console.log('CSV created → ./output/people.csv');
+}
+
+main().catch(console.error);
 ```
 ## Append to existing CSV
 ```ts
-import { createObjectCsvWriter } from 'csv-writer';
+// append-csv-stringify-modern.ts
+import fs from 'fs/promises';
+import path from 'path';
+import { stringify } from 'csv-stringify/sync';
 
+const ensureDir = async (filePath: string): Promise<void> => {
+  await fs.mkdir(path.dirname(filePath), { recursive: true });
+};
+
+// YOUR APPEND FUNCTION —10× FASTER
 export async function appendToCsvFile<T extends Record<string, any>>(
   filePath: string,
   records: T[],
@@ -94,143 +134,136 @@ export async function appendToCsvFile<T extends Record<string, any>>(
 ): Promise<void> {
   await ensureDir(filePath);
 
-  const csvWriter = createObjectCsvWriter({
-    path: filePath,
-    header,
-    append: true, // This enables append mode
+  // Detect if file exists → only write header on first run
+  const fileExists = await fs.stat(filePath).then(() => true).catch(() => false);
+
+  const columns = header.map(h => ({
+    key: h.id as string,
+    header: h.title,
+  }));
+
+  const csvContent = stringify(records, {
+    header: !fileExists,  // Only write header if file is new
+    columns,
   });
 
-  await csvWriter.writeRecords(records);
-}
-```
-## Read CSV File
-```ts
-import { createReadStream, existsSync } from 'fs';
-import csvParser from 'csv-parser';
-import { pipeline } from 'stream/promises';
-
-export const readCsvFile = async <T = any>(filePath: string): Promise<T[]> => {
-  if (!existsSync(filePath)) return [];
-
-  const results: T[] = [];
-
-  await pipeline(
-    createReadStream(filePath),
-    csvParser(),
-    async function* (source) {
-      for await (const row of source) results.push(row as T);
-    }
-  );
-
-  return results;
-};
-```
-## Example Usage
-```ts
-async function main() {
-  const txtFile = './data/log.txt';
-  const csvFile = './data/people.csv';
-
-  // Text file examples
-  await writeTextFile(txtFile, 'Hello TypeScript!\n');
-  await appendTextFile(txtFile, 'Second line');
-  await appendTextFile(txtFile, 'Third line');
-
-  const content = await readTextFile(txtFile);
-  console.log('Text file content:\n', content);
-
-  // CSV examples
-  const header = [
-    { id: 'name', title: 'Name' },
-    { id: 'age', title: 'Age' },
-    { id: 'city', title: 'City' },
-  ];
-
-  const people: Person[] = [
-    { name: 'Alice', age: 25, city: 'New York' },
-    { name: 'Bob', age: 30, city: 'London' },
-  ];
-
-  await writeCsvFile(csvFile, people, header);
-  await appendToCsvFile(csvFile, [{ name: 'Charlie', age: 35, city: 'Paris' }], header);
-
-  const loadedPeople = await readCsvFile<Person>(csvFile);
-  console.log('CSV data:', loadedPeople);
+  // Append mode using appendFile
+  await fs.appendFile(filePath, csvContent, 'utf-8');
 }
 
-main().catch(console.error);
-```
-## Lightweight CSV without external deps (using csv-parse/stringify)
-```ts
-import { parse } from 'csv-parse/sync';
-import { stringify } from 'csv-stringify/sync';
-import fs from 'fs/promises';
-import path from 'path';
-
-// Optional: auto-create directories (like your previous helpers)
-const ensureDir = (filePath: string) =>
-  fs.mkdir(path.dirname(filePath), { recursive: true });
-
-export async function writeCsvSimple(filePath: string, data: any[][]): Promise<void> {
-  await ensureDir(filePath);
-  const csv = stringify(data, { header: true });
-  await fs.writeFile(filePath, csv, 'utf-8');
-}
-```
-## Real-World Scraper Example
-```ts
-// scraper.ts
-import { appendCSVRow, readAndLoopCSV, writeCSV, readCSV } from './csv';
-
+// ─────────────────────────────────────
+// EXACT SAME EXAMPLE 
 interface Product {
   title: string;
   price: string;
   url: string;
-  date: string;
+  scrapedAt: string;
 }
 
-const FILE = './output/products.csv';
+// Define header once (reuse everywhere) — IDENTICAL
+const header = [
+  { id: 'title', title: 'Product Name' },
+  { id: 'price', title: 'Price' },
+  { id: 'url', title: 'Link' },
+  { id: 'scrapedAt', title: 'Scraped At' },
+] as const;
 
-async function scrapeAndSave() {
-  console.log('Scraping started...');
+// Fake data — IDENTICAL
+const fakeScrapedItems: Product[] = [
+  { title: 'iPhone 16', price: '$999', url: 'https://apple.com/1', scrapedAt: new Date().toISOString() },
+  { title: 'MacBook Pro', price: '$2399', url: 'https://apple.com/2', scrapedAt: new Date().toISOString() },
+  { title: 'AirPods Max', price: '$549', url: 'https://apple.com/3', scrapedAt: new Date().toISOString() },
+  { title: 'Samsung S24', price: '$899', url: 'https://samsung.com/1', scrapedAt: new Date().toISOString() },
+];
 
-  // Example: scraping 5 products one by one
-  const products = [
-    { title: 'iPhone 16', price: '$999', url: 'https://apple.com/1', date: new Date().toISOString() },
-    { title: 'Samsung S24', price: '$899', url: 'https://samsung.com/1', date: new Date().toISOString() },
-    { title: 'MacBook Pro', price: '$2499', url: 'https://apple.com/2', date: new Date().toISOString() },
-  ];
+// Main function — 100% IDENTICAL
+async function main() {
+  const filePath = './output/scraped-products.csv';
 
-  for (const product of products) {
-    await appendCSVRow(FILE, product);  // Appends 1 row at a time → safe & fast
-    console.log(`Saved: ${product.title}`);
-    // await fakeNetworkDelay(); // simulate real scraping delay
+  console.log('Starting append loop...');
+
+  for (const item of fakeScrapedItems) {
+    await appendToCsvFile(filePath, [item], header);
+    console.log(`Appended: ${item.title}`);
+    
+    await new Promise(r => setTimeout(r, 300));
   }
 
-  console.log('All saved!');
+  console.log(`\nDone! All items saved to:\n${path.resolve(filePath)}`);
 }
 
-async function showAllData() {
-  console.log('\nReading all saved products:');
-  const data = await readCSV<Product>(FILE);
-  console.table(data);
-}
+main().catch(console.error);
+```
+## Read CSV File
+```ts
+// read-csv-modern-csv-parse.ts
+import { createReadStream } from 'fs';
+import { parse } from 'csv-parse';
+import { pipeline } from 'stream/promises';
+import { promisify } from 'util';
+import { finished } from 'stream';
 
-async function processEachRow() {
-  console.log('\nProcessing each row one by one:');
-  await readAndLoopCSV<Product>(FILE, (row, index) => {
-    console.log(`${index + 1}. ${row.title} → ${row.price}`);
+// Modern csv-parse (replaces csv-parser)
+const parseStream = parse({
+  columns: true,        // Automatically use first row as headers
+  skip_empty_lines: true,
+  trim: true,
+});
+
+export const readCsvFile = async <T = any>(filePath: string): Promise<T[]> => {
+  return new Promise<T[]>((resolve, reject) => {
+    if (!require('fs').existsSync(filePath)) {
+      return resolve([]);
+    }
+
+    const results: T[] = [];
+
+    pipeline(
+      createReadStream(filePath),
+      parseStream,
+      async function* (source) {
+        for await (const row of source) {
+          results.push(row as T);
+        }
+      },
+      (err) => {
+        if (err) reject(err);
+        else resolve(results);
+      }
+    );
   });
+};
+
+// ─────────────────────────────────────
+// EXACT SAME EXAMPLE 
+interface Person {
+  name: string;
+  age: string;
+  city: string;
 }
 
-// Run examples
 async function main() {
-  await scrapeAndSave();
-  await showAllData();
-  await processEachRow();
+  const filePath = './output/people.csv';
 
-  // Or overwrite everything
-  // await writeCSV(FILE, [{ title: 'New Phone', price: '$100', url: '...', date: '...' }]);
+  // Read the CSV — typed array!
+  const people = await readCsvFile<Person>(filePath);
+
+  if (people.length === 0) {
+    console.log('No data found or file missing');
+    return;
+  }
+
+  console.log(`Found ${people.length} people:\n`);
+
+  // Simple loop — IDENTICAL
+  for (const [i, person] of people.entries()) {
+    console.log(`${i + 1}. ${person.name} – ${person.age} years old – ${person.city}`);
+  }
+
+  // Or even shorter with for...of
+  // for (const p of people) {
+  //   console.log(`→ ${p.name} from ${p.city}`);
+  // }
 }
 
 main().catch(console.error);
@@ -238,6 +271,61 @@ main().catch(console.error);
 
 ## Handle JSON file
 ```ts
+// json-utils.ts
+import fs from 'fs/promises';
+import path from 'path';
+
+// Ensure directory exists (shared helper)
+const ensureDir = async (filePath: string): Promise<void> => {
+  await fs.mkdir(path.dirname(filePath), { recursive: true });
+};
+
+// ──────────────────────────────────────────────────────────────
+// 1. Read JSON file (with fallback to default)
+export async function readJson<T>(filePath: string, defaultValue: T): Promise<T> {
+  try {
+    const data = await fs.readFile(filePath, 'utf-8');
+    return JSON.parse(data) as T;
+  } catch (err: any) {
+    if (err.code === 'ENOENT') {
+      console.log(`File not found → returning default: ${filePath}`);
+      return defaultValue;
+    }
+    throw err;
+  }
+}
+
+// ──────────────────────────────────────────────────────────────
+// 2. Write / Overwrite JSON (pretty printed)
+export async function writeJson<T>(filePath: string, data: T): Promise<void> {
+  await ensureDir(filePath);
+  await fs.writeFile(filePath, JSON.stringify(data, null, 2), 'utf-8');
+}
+
+// ──────────────────────────────────────────────────────────────
+// 3. Append to JSON Array (most common in scrapers!)
+export async function appendJsonArray<T>(
+  filePath: string,
+  newItem: T
+): Promise<void> {
+  const array = await readJson<T[]>(filePath, []);
+  array.push(newItem);
+  await writeJson(filePath, array);
+}
+
+// ──────────────────────────────────────────────────────────────
+// 4. Update JSON object (e.g. progress, config, metadata)
+export async function updateJson<T extends Record<string, any>>(
+  filePath: string,
+  updater: (current: T) => T,
+  defaultValue: T
+): Promise<void> {
+  const current = await readJson(filePath, defaultValue);
+  const updated = updater(current);
+  await writeJson(filePath, updated);
+}
+
+
 // example-usage.ts
 import { readJson, writeJson, appendJsonArray, updateJson } from './json-utils';
 
