--- a/06. Automation and Scraping/03. ts_file_operation.md
+++ b/06. Automation and Scraping/03. ts_file_operation.md
@@ -115,6 +115,27 @@ async function main() {
 
 main().catch(console.error);
 ```
+## Load Progress
+```ts
+import fs from 'fs/promises';
+const PROGRESS_FILE = 'data/notaires_progress.json';
+// Load progress (returns start page)
+async function loadProgress(totalPages: number): Promise<number> {
+  try {
+    const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
+    const json = JSON.parse(data);
+    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
+      console.log(`Resuming from page ${json.currentPage + 1}`);
+      return json.currentPage + 1;
+    }
+  } catch (err) {
+    // No progress file → start from beginning
+  }
+  return 1;
+}
+
+let startPage = await loadProgress(totalPages);
+```
 ## Append to existing CSV
 ```ts
 // append-csv-stringify-modern.ts
