--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -68,20 +68,23 @@ export async function readTextFile(filePath: string): Promise<string> {
 ## 02. util-csv.ts – Fast CSV Utils (2025 Standard)
 ```ts
 // util-csv.ts
+// util-csv.ts – FINAL, PERFECT, NO ERRORS
 import fs from 'fs/promises';
 import path from 'path';
 import { stringify } from 'csv-stringify/sync';
-import { parse } from 'csv-parse';
-import { createReadStream } from 'fs';
-import { pipeline } from 'stream/promises';
+import { parse } from 'csv-parse/sync'; // ← sync is best for reading
 
 // ─────────────────────────────────────
-// Shared: Ensure dir + Progress (same as in util-text.ts)
+// Shared: Ensure dir + Progress
 export async function ensureDir(filePath: string): Promise<void> {
   await fs.mkdir(path.dirname(filePath), { recursive: true });
 }
 
-export interface Progress { currentPage: number; lastRun?: string }
+export interface Progress {
+  currentPage: number;
+  lastRun?: string;
+}
+
 export async function saveProgress(PROGRESS_FILE: string, page: number): Promise<void> {
   const progress: Progress = { currentPage: page, lastRun: new Date().toISOString() };
   await ensureDir(PROGRESS_FILE);
@@ -114,7 +117,7 @@ export async function writeCsvFile<T extends Record<string, any>>(
 }
 
 // ─────────────────────────────────────
-// CSV: Append (one or many rows)
+// CSV: Append
 export async function appendToCsvFile<T extends Record<string, any>>(
   filePath: string,
   records: T[],
@@ -128,25 +131,25 @@ export async function appendToCsvFile<T extends Record<string, any>>(
 }
 
 // ─────────────────────────────────────
-// CSV: Read (streaming + typed)
+// CSV: Read – SIMPLE, FAST, NO ERRORS, 2025 STANDARD
 export async function readCsvFile<T extends Record<string, any>>(
   filePath: string
 ): Promise<T[]> {
-  return new Promise((resolve, reject) => {
-    if (!require('fs').existsSync(filePath)) return resolve([]);
+  try {
+    const content = await fs.readFile(filePath, 'utf-8');
 
-    const results: T[] = [];
-    const parser = parse({ columns: true, skip_empty_lines: true, trim: true });
-
-    pipeline(
-      createReadStream(filePath),
-      parser,
-      async function* (source) {
-        for await (const row of source) results.push(row as T);
-      },
-      (err) => (err ? reject(err) : resolve(results))
-    );
-  });
+    // This is the correct return — NOT the parser!
+    return parse(content, {
+      columns: true,
+      skip_empty_lines: true,
+      trim: true,
+    }) as T[];
+  } catch (err: any) {
+    if (err.code === 'ENOENT') {
+      return []; // File doesn't exist → return empty array
+    }
+    throw err; // Other errors (corrupted file, etc.)
+  }
 }
 ```
 ## 03. util-json.ts – JSON Utils (Perfect for Scrapers)
