--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -25,14 +25,11 @@ export interface Progress {
 }
 
 export async function saveProgress(PROGRESS_FILE: string, page: number): Promise<void> {
-  const progress: Progress = {
-    currentPage: page,
-    totalPages: undefined, // optional
-    lastRun: new Date().toISOString(),
-  };
+  const progress: Progress = { currentPage: page, lastRun: new Date().toISOString() };
   await ensureDir(PROGRESS_FILE);
   await fs.writeFile(PROGRESS_FILE, JSON.stringify(progress, null, 2), 'utf-8');
 }
+
 
 export async function loadProgress(totalPages: number, PROGRESS_FILE: string): Promise<number> {
   try {
