--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -3,10 +3,44 @@
 npm install csv-stringify csv-parse
 npm install --save-dev @types/node
 ```
-
-## 01. util-text.ts – Text File Utils
+## 00. utils/progress.ts
 ```ts
-// util-text.ts
+import fs from 'fs/promises';
+import path from 'path';
+
+async function ensureDir(filePath: string): Promise<void> {
+  await fs.mkdir(path.dirname(filePath), { recursive: true });
+}
+
+async function appendTextFile(filePath: string, content: string): Promise<void> {
+  await ensureDir(filePath);
+  await fs.appendFile(filePath, content + '\n', 'utf-8');
+}
+
+// Save progress to disk
+async function saveProgress(currentPage: number, totalPages: number, PROGRESS_FILE: string ) {
+  await ensureDir(PROGRESS_FILE);
+  await fs.writeFile(PROGRESS_FILE, JSON.stringify({ currentPage, totalPages }, null, 2));
+}
+
+// Load progress (returns start page)
+async function loadProgress(totalPages: number, PROGRESS_FILE : string): Promise<number> {
+  try {
+    const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
+    const json = JSON.parse(data);
+    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
+      console.log(`Resuming from page ${json.currentPage + 1}`);
+      return json.currentPage + 1;
+    }
+  } catch (err) {
+    // No progress file → start from beginning
+  }
+  return 1;
+}
+```
+
+## 01. utils/text.ts – Text File Utils
+```ts
 import fs from 'fs/promises';
 import path from 'path';
 
@@ -15,7 +49,6 @@ import path from 'path';
 export async function ensureDir(filePath: string): Promise<void> {
   await fs.mkdir(path.dirname(filePath), { recursive: true });
 }
-
 // ─────────────────────────────────────
 // Progress Management
 export interface Progress {
@@ -23,28 +56,6 @@ export interface Progress {
   totalPages?: number;
   lastRun?: string;
 }
-
-export async function saveProgress(PROGRESS_FILE: string, page: number): Promise<void> {
-  const progress: Progress = { currentPage: page, lastRun: new Date().toISOString() };
-  await ensureDir(PROGRESS_FILE);
-  await fs.writeFile(PROGRESS_FILE, JSON.stringify(progress, null, 2), 'utf-8');
-}
-
-
-export async function loadProgress(totalPages: number, PROGRESS_FILE: string): Promise<number> {
-  try {
-    const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
-    const json = JSON.parse(data) as Progress;
-    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
-      console.log(`Resuming from page ${json.currentPage + 1}`);
-      return json.currentPage + 1;
-    }
-  } catch (err) {
-    // File missing or invalid → start from 1
-  }
-  return 1;
-}
-
 // ─────────────────────────────────────
 // Text file operations
 export async function writeTextFile(filePath: string, content: string): Promise<void> {
@@ -62,10 +73,8 @@ export async function readTextFile(filePath: string): Promise<string> {
 }
 ```
 
-## 02. util-csv.ts – Fast CSV Utils (2025 Standard)
+## 02. utils/csv.ts – Fast CSV Utils (2025 Standard)
 ```ts
-// util-csv.ts
-// util-csv.ts – FINAL, PERFECT, NO ERRORS
 import fs from 'fs/promises';
 import path from 'path';
 import { stringify } from 'csv-stringify/sync';
@@ -81,25 +90,6 @@ export interface Progress {
   currentPage: number;
   lastRun?: string;
 }
-
-export async function saveProgress(PROGRESS_FILE: string, page: number): Promise<void> {
-  const progress: Progress = { currentPage: page, lastRun: new Date().toISOString() };
-  await ensureDir(PROGRESS_FILE);
-  await fs.writeFile(PROGRESS_FILE, JSON.stringify(progress, null, 2), 'utf-8');
-}
-
-export async function loadProgress(totalPages: number, PROGRESS_FILE: string): Promise<number> {
-  try {
-    const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
-    const json = JSON.parse(data) as Progress;
-    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
-      console.log(`Resuming from page ${json.currentPage + 1}`);
-      return json.currentPage + 1;
-    }
-  } catch {}
-  return 1;
-}
-
 // ─────────────────────────────────────
 // CSV: Write / Overwrite
 export async function writeCsvFile<T extends Record<string, any>>(
@@ -149,9 +139,8 @@ export async function readCsvFile<T extends Record<string, any>>(
   }
 }
 ```
-## 03. util-json.ts – JSON Utils (Perfect for Scrapers)
+## 03. utils/json.ts – JSON Utils (Perfect for Scrapers)
 ```ts
-// util-json.ts
 import fs from 'fs/promises';
 import path from 'path';
 
@@ -159,25 +148,6 @@ import path from 'path';
 // Shared: Ensure dir + Progress
 export async function ensureDir(filePath: string): Promise<void> {
   await fs.mkdir(path.dirname(filePath), { recursive: true });
-}
-
-export interface Progress { currentPage: number; lastRun?: string }
-export async function saveProgress(PROGRESS_FILE: string, page: number): Promise<void> {
-  const progress: Progress = { currentPage: page, lastRun: new Date().toISOString() };
-  await ensureDir(PROGRESS_FILE);
-  await fs.writeFile(PROGRESS_FILE, JSON.stringify(progress, null, 2), 'utf-8');
-}
-
-export async function loadProgress(totalPages: number, PROGRESS_FILE: string): Promise<number> {
-  try {
-    const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
-    const json = JSON.parse(data) as Progress;
-    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
-      console.log(`Resuming from page ${json.currentPage + 1}`);
-      return json.currentPage + 1;
-    }
-  } catch {}
-  return 1;
 }
 
 // ─────────────────────────────────────
