--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -186,43 +186,41 @@ export async function updateJson<T extends object>(
 ## Example Uses
 ```ts
 // scraper.ts
-import { appendTextFile } from './utils/util-text';
+// scraper.ts – 100% WORKING VERSION
+import { appendTextFile } from './utils/text';
 import {
   appendToCsvFile,
   writeCsvFile,
   readCsvFile,
-  loadProgress,
-  saveProgress,
-} from './utils/util-csv';
+  loadProgress as loadCsvProgress,
+  saveProgress as saveCsvProgress,
+} from './utils/csv';
 import {
   appendJsonArray,
   readJson,
   writeJson,
   loadProgress as loadJsonProgress,
   saveProgress as saveJsonProgress,
-} from './utils/util-json';
+} from './utils/json';
 
 // ─────────────────────────────────────
-// 1. TEXT FILE: Save raw links (super fast)
+// 1. TEXT FILE: Save raw links
 async function exampleTextFile() {
   const file = 'data/links.txt';
-
   const fakeLinks = [
     'https://notaires.fr/notaire/12345',
     'https://notaires.fr/notaire/67890',
     'https://notaires.fr/notaire/abcde',
   ];
-
   for (const link of fakeLinks) {
     await appendTextFile(file, link);
     console.log('Saved link:', link);
   }
-
   console.log('All links saved to data/links.txt\n');
 }
 
 // ─────────────────────────────────────
-// 2. CSV: Append scraped data + resume support
+// 2. CSV: Append + Resume
 interface Notaire {
   name: string;
   city: string;
@@ -232,7 +230,7 @@ interface Notaire {
 }
 
 const CSV_FILE = 'data/notaires.csv';
-const PROGRESS_FILE = 'data/progress.json';
+const CSV_PROGRESS_FILE = 'data/progress-csv.json';
 
 const header = [
   { id: 'name', title: 'Full Name' },
@@ -244,12 +242,11 @@ const header = [
 
 async function exampleCsvWithResume() {
   const totalPages = 1932;
-  let currentPage = await loadProgress(totalPages, PROGRESS_FILE);
+  let currentPage = await loadCsvProgress(totalPages, CSV_PROGRESS_FILE);
 
   console.log(`Starting CSV scraping from page ${currentPage}...`);
 
-  // Simulate scraping 10 pages
-  for (; currentPage <= totalPages && currentPage <= currentPage + 9; currentPage++) {
+  for (; currentPage <= currentPage + 9 && currentPage <= totalPages; currentPage++) {
     const fakeData: Notaire[] = [
       {
         name: `Notaire ${currentPage}A`,
@@ -268,16 +265,15 @@ async function exampleCsvWithResume() {
     ];
 
     await appendToCsvFile(CSV_FILE, fakeData, header);
-    await saveProgress(PROGRESS_FILE, currentPage);
+    await saveCsvProgress(CSV_PROGRESS_FILE, currentPage);
 
     console.log(`Page ${currentPage} saved → 2 notaires`);
   }
-
-  console.log('CSV example done! Check data/notaires.csv\n');
+  console.log('CSV example done!\n');
 }
 
 // ─────────────────────────────────────
-// 3. JSON: Save full objects + progress tracking
+// 3. JSON: Append + Resume
 interface Product {
   title: string;
   price: string;
@@ -286,28 +282,27 @@ interface Product {
 }
 
 const JSON_FILE = 'data/products.json';
-const JSON_PROGRESS = 'data/json-progress.json';
+const JSON_PROGRESS_FILE = 'data/progress-json.json';
 
 async function exampleJsonAppend() {
-  let page = await loadJsonProgress(100, JSON_PROGRESS);
+  let page = await loadJsonProgress(100, JSON_PROGRESS_FILE);
 
   console.log(`Starting JSON append from page ${page}...`);
 
-  for (; page <= page + 4; page++) {
+  for (let i = 0; i < 5; i++, page++) {
     const product: Product = {
       title: `MacBook Pro ${page}`,
-      price: '$' + (2000 + page * 10),
+      price: `$${(2000 + page * 10)}`,
       url: `https://apple.com/macbook-${page}`,
       scrapedAt: new Date().toISOString(),
     };
 
     await appendJsonArray(JSON_FILE, product);
-    await saveJsonProgress(JSON_PROGRESS, page);
+    await saveJsonProgress(JSON_PROGRESS_FILE, page);
 
     console.log(`Appended: ${product.title}`);
   }
-
-  console.log('JSON example done! Check data/products.json\n');
+  console.log('JSON example done!\n');
 }
 
 // ─────────────────────────────────────
@@ -317,9 +312,9 @@ async function exampleReadAll() {
 
   // Read text file
   try {
-    const content = await import('fs/promises').then(fs => fs.readFile('data/links.txt', 'utf-8'));
+    const content = await import('fs/promises').then(m => m.readFile('data/links.txt', 'utf-8'));
     console.log('Links from TXT:');
-    console.log(content.trim());
+    console.log(content.trimEnd());
   } catch {}
 
   // Read CSV
@@ -340,7 +335,6 @@ async function main() {
   await exampleCsvWithResume();
   await exampleJsonAppend();
   await exampleReadAll();
-
   console.log('All examples completed! Check the data/ folder');
 }
 
