--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -8,23 +8,24 @@ npm install --save-dev @types/node
 import fs from 'fs/promises';
 import path from 'path';
 
-async function ensureDir(filePath: string): Promise<void> {
+
+export async function ensureDir(filePath: string): Promise<void> {
   await fs.mkdir(path.dirname(filePath), { recursive: true });
 }
 
-async function appendTextFile(filePath: string, content: string): Promise<void> {
+export async function appendTextFile(filePath: string, content: string): Promise<void> {
   await ensureDir(filePath);
   await fs.appendFile(filePath, content + '\n', 'utf-8');
 }
 
 // Save progress to disk
-async function saveProgress(currentPage: number, totalPages: number, PROGRESS_FILE: string ) {
+export async function saveProgress(currentPage: number, totalPages: number, PROGRESS_FILE: string ) {
   await ensureDir(PROGRESS_FILE);
   await fs.writeFile(PROGRESS_FILE, JSON.stringify({ currentPage, totalPages }, null, 2));
 }
 
 // Load progress (returns start page)
-async function loadProgress(totalPages: number, PROGRESS_FILE : string): Promise<number> {
+export async function loadProgress(totalPages: number, PROGRESS_FILE : string): Promise<number> {
   try {
     const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
     const json = JSON.parse(data);
