--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -5,37 +5,51 @@ npm install --save-dev @types/node
 ```
 ## 00. utils/progress.ts
 ```ts
+// utils/progress.ts
 import fs from 'fs/promises';
 import path from 'path';
-
 
 export async function ensureDir(filePath: string): Promise<void> {
   await fs.mkdir(path.dirname(filePath), { recursive: true });
 }
-
-export async function appendTextFile(filePath: string, content: string): Promise<void> {
-  await ensureDir(filePath);
-  await fs.appendFile(filePath, content + '\n', 'utf-8');
-}
-
-// Save progress to disk
-export async function saveProgress(currentPage: number, totalPages: number, PROGRESS_FILE: string ) {
+// Save current page (we only need currentPage — totalPages is optional)
+export async function saveProgress(PROGRESS_FILE: string, currentPage: number): Promise<void> {
+  const progress = {
+    currentPage,
+    savedAt: new Date().toISOString(),
+  };
   await ensureDir(PROGRESS_FILE);
-  await fs.writeFile(PROGRESS_FILE, JSON.stringify({ currentPage, totalPages }, null, 2));
+  await fs.writeFile(PROGRESS_FILE, JSON.stringify(progress, null, 2), 'utf-8');
 }
-
-// Load progress (returns start page)
-export async function loadProgress(totalPages: number, PROGRESS_FILE : string): Promise<number> {
+// Load progress — returns the NEXT page to scrape
+// If file doesn't exist or invalid → starts from page 1
+export async function loadProgress(
+  totalPages: number,
+  PROGRESS_FILE: string
+): Promise<number> {
   try {
     const data = await fs.readFile(PROGRESS_FILE, 'utf-8');
     const json = JSON.parse(data);
-    if (json.currentPage >= 1 && json.currentPage <= totalPages) {
-      console.log(`Resuming from page ${json.currentPage + 1}`);
-      return json.currentPage + 1;
+
+    // Validate that currentPage is a valid number and in range
+    if (
+      typeof json.currentPage === 'number' &&
+      json.currentPage >= 1 &&
+      json.currentPage <= totalPages
+    ) {
+      const nextPage = json.currentPage + 1;
+      console.log(`Resuming from page ${nextPage} (last saved: ${json.currentPage})`);
+      return nextPage;
     }
-  } catch (err) {
-    // No progress file → start from beginning
+  } catch (err: any) {
+    // ENOENT = file not found → normal, just start from 1
+    // JSON parse error → corrupted → start from 1
+    if (err.code !== 'ENOENT') {
+      console.warn('Progress file corrupted or invalid → starting from page 1');
+    }
   }
+  // No valid progress → start from page 1
+  console.log('No progress found → starting from page 1');
   return 1;
 }
 ```
