--- a/06. Automation and Scraping/04. utils-file-ts.md
+++ b/06. Automation and Scraping/04. utils-file-ts.md
@@ -10,8 +10,12 @@ import fs from 'fs/promises';
 import path from 'path';
 
 export async function ensureDir(filePath: string): Promise<void> {
-  await fs.mkdir(path.dirname(filePath), { recursive: true });
+  const dir = path.dirname(filePath);
+  if (dir) {
+    await fs.mkdir(dir, { recursive: true });
+  }
 }
+
 // Save current page (we only need currentPage — totalPages is optional)
 export async function saveProgress(PROGRESS_FILE: string, currentPage: number): Promise<void> {
   const progress = {
@@ -21,6 +25,7 @@ export async function saveProgress(PROGRESS_FILE: string, currentPage: number): 
   await ensureDir(PROGRESS_FILE);
   await fs.writeFile(PROGRESS_FILE, JSON.stringify(progress, null, 2), 'utf-8');
 }
+
 // Load progress — returns the NEXT page to scrape
 // If file doesn't exist or invalid → starts from page 1
 export async function loadProgress(
@@ -48,6 +53,7 @@ export async function loadProgress(
       console.warn('Progress file corrupted or invalid → starting from page 1');
     }
   }
+
   // No valid progress → start from page 1
   console.log('No progress found → starting from page 1');
   return 1;
